crates/apollo-compiler/test_data/diagnostics/0069_subselection_of_object.txt
Error: interface, union and object types must have a subselection set
   ╭─[0069_subselection_of_object.graphql:2:3]
   │
 2 │   pet1
   │   ──┬─  
   │     ╰─── Pet.pet1 is an object type and must select fields
───╯
Error: interface, union and object types must have a subselection set
   ╭─[0069_subselection_of_object.graphql:3:3]
   │
 3 │   pet2
   │   ──┬─  
   │     ╰─── Pet.pet2 is an object type and must select fields
───╯
Error: interface, union and object types must have a subselection set
   ╭─[0069_subselection_of_object.graphql:4:3]
   │
 4 │   pet3
   │   ──┬─  
   │     ╰─── Pet.pet3 is an object type and must select fields
───╯
Error: interface, union and object types must have a subselection set
   ╭─[0069_subselection_of_object.graphql:5:3]
   │
 5 │   pet4
   │   ──┬─  
   │     ╰─── Pet.pet4 is an object type and must select fields
───╯
Error: interface, union and object types must have a subselection set
   ╭─[0069_subselection_of_object.graphql:6:3]
   │
 6 │   pet5
   │   ──┬─  
   │     ╰─── Pet.pet5 is an object type and must select fields
───╯
Error: interface, union and object types must have a subselection set
   ╭─[0069_subselection_of_object.graphql:7:3]
   │
 7 │   pet6
   │   ──┬─  
   │     ╰─── Pet.pet6 is an object type and must select fields
───╯

